--- a/app/src/main/res/layout/dialog_menu_browser.xml
+++ b/app/src/main/res/layout/dialog_menu_browser.xml
@@ -20,42 +20,55 @@
         android:text="_"
         android:textColor="#FFFFFF" />
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:paddingTop="20dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:paddingTop="20dp">
+
+                <Button
+                    android:id="@+id/button_back"
+                    android:layout_width="30dp"
+                    android:layout_height="35dp"
+                    android:background="#00000000"
+                    android:foreground="@drawable/arrow_left" />
+
+                <Button
+                    android:id="@+id/button_refresh"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:background="#00000000"
+                    android:foreground="@drawable/arrow_refresh" />
+
+                <Button
+                    android:id="@+id/button_forward"
+                    android:layout_width="30dp"
+                    android:layout_height="35dp"
+                    android:background="#00000000"
+                    android:foreground="@drawable/arrow_right" />
+            </LinearLayout>
 
             <Button
-                android:id="@+id/button_back"
-                android:layout_width="30dp"
-                android:layout_height="35dp"
-                android:background="#00000000"
-                android:foreground="@drawable/arrow_left" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#00000000"/>
 
-            <Button
-                android:id="@+id/button_refresh"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:background="#00000000"
-                android:foreground="@drawable/arrow_refresh" />
-
-            <Button
-                android:id="@+id/button_forward"
-                android:layout_width="30dp"
-                android:layout_height="35dp"
-                android:background="#00000000"
-                android:foreground="@drawable/arrow_right" />
         </LinearLayout>
 
-    </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
