--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,43 +14,86 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="30dp"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:gravity="center">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <EditText
-                    android:id="@+id/edit_search"
-                    android:layout_width="160dp"
-                    android:layout_height="48dp"
-                    android:text="cn.bing.com"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="90dp"
+                    android:layout_marginBottom="90dp"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:scaleType="center"
-                    android:src="@mipmap/ic_launcher_foreground" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:gravity="center">
+
+                        <EditText
+                            android:id="@+id/edit_search"
+                            android:layout_width="160dp"
+                            android:layout_height="48dp"
+                            android:hint="@string/text_searchbox" />
+
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:scaleType="center"
+                            android:src="@mipmap/ic_launcher_foreground" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="40dp"
+                    android:orientation="vertical"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp">
+
+                        <Button
+                            android:id="@+id/menu_history"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="#303030"
+                            android:text="@string/menu_history"
+                            android:textColor="#FFFFFF" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp">
+
+                        <Button
+                            android:id="@+id/menu_bookmark"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="#303030"
+                            android:text="@string/menu_bookmark"
+                            android:textColor="#FFFFFF" />
+
+                    </LinearLayout>
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/button_menu"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_gravity="bottom|center_horizontal"
-            android:background="#00000000"
-            android:text="_"
-            android:textColor="#FFFFFF" />
+        </ScrollView>
     </FrameLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
