--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_marginTop="90dp"
-                    android:layout_marginBottom="90dp"
+                    android:layout_marginBottom="70dp"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -51,46 +51,39 @@
                             android:layout_height="40dp"
                             android:scaleType="center"
                             android:src="@mipmap/ic_launcher_foreground" />
+
                     </LinearLayout>
                 </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:src="@drawable/menu_up" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="40dp"
+                    android:layout_marginBottom="60dp"
                     android:orientation="vertical"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp">
 
-                    <LinearLayout
+                    <Button
+                        android:id="@+id/menu_history"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="5dp">
+                        android:background="@drawable/menu_button"
+                        android:text="@string/menu_history"
+                        android:textColor="#FFFFFF" />
 
-                        <Button
-                            android:id="@+id/menu_history"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="#303030"
-                            android:text="@string/menu_history"
-                            android:textColor="#FFFFFF" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
+                    <Button
+                        android:id="@+id/menu_bookmark"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="5dp">
-
-                        <Button
-                            android:id="@+id/menu_bookmark"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="#303030"
-                            android:text="@string/menu_bookmark"
-                            android:textColor="#FFFFFF" />
-
-                    </LinearLayout>
+                        android:background="@drawable/menu_button"
+                        android:text="@string/menu_bookmark"
+                        android:textColor="#FFFFFF" />
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
