--- a/app/src/main/res/layout/dialog_menu.xml
+++ b/app/src/main/res/layout/dialog_menu.xml
@@ -11,14 +11,12 @@
     app:elevation="6dp"
     app:layout_behavior="@string/bottom_sheet_behavior">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="-10dp"
-        android:background="#00000000"
-        android:text="_"
-        android:textColor="#FFFFFF" />
+        android:src="@drawable/menu_up" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -38,46 +36,49 @@
                 android:orientation="horizontal"
                 android:paddingTop="20dp">
 
-                <Button
+                <ImageButton
                     android:id="@+id/button_back"
-                    android:layout_width="30dp"
-                    android:layout_height="35dp"
-                    android:background="#00000000"
-                    android:foreground="@drawable/arrow_left" />
+                    style="@style/BrowserControlButton"
+                    android:src="@drawable/arrow_left" />
 
-                <Button
+                <ImageButton
                     android:id="@+id/button_refresh"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="7dp"
-                    android:background="#00000000"
-                    android:foreground="@drawable/arrow_refresh" />
+                    style="@style/BrowserControlButton"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="4dp"
+                    android:src="@drawable/arrow_refresh" />
 
-                <Button
+                <ImageButton
                     android:id="@+id/button_bookmark"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="7dp"
-                    android:layout_marginRight="15dp"
-                    android:background="#00000000"
-                    android:foreground="@drawable/bookmark" />
+                    style="@style/BrowserControlButton"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginEnd="8dp"
+                    android:src="@drawable/bookmark" />
 
-                <Button
+                <ImageButton
                     android:id="@+id/button_forward"
-                    android:layout_width="30dp"
-                    android:layout_height="35dp"
-                    android:background="#00000000"
-                    android:foreground="@drawable/arrow_right" />
+                    style="@style/BrowserControlButton"
+                    android:src="@drawable/arrow_right" />
+
             </LinearLayout>
 
-            <Button
+            <TextView
+                android:id="@+id/text_url_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:ellipsize="end"
+                android:lines="1"
+                android:minEms="30"
+                android:textColor="#606060" />
+
+            <EditText
+                android:id="@+id/text_url"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#00000000"/>
-
+                android:singleLine="true"
+                android:textColor="#FFFFFF" />
         </LinearLayout>
-
     </ScrollView>
 
 </FrameLayout>
