--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,6 +84,14 @@
                         android:background="@drawable/menu_button"
                         android:text="@string/menu_bookmark"
                         android:textColor="#FFFFFF" />
+
+                    <Button
+                        android:id="@+id/menu_download"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/menu_button"
+                        android:text="@string/menu_download"
+                        android:textColor="#FFFFFF" />
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
