添加 XWalkView 移动功能以适配圆屏

--- a/app/src/main/res/layout/dialog_menu.xml
+++ b/app/src/main/res/layout/dialog_menu.xml
@@ -90,7 +90,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/menu_button"
-                    android:text="@string/browser_zoom"
+                    android:text="@string/browser_move"
                     android:textColor="#FFFFFF" />
 
                 <Button
