--- a/app/src/main/res/layout/activity_browser.xml
+++ b/app/src/main/res/layout/activity_browser.xml
@@ -13,18 +13,36 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginLeft="-50dp"
+            android:layout_marginTop="-50dp"
+            android:layout_marginRight="-50dp"
+            android:layout_marginBottom="-50dp">
 
             <org.xwalk.core.XWalkView
                 android:id="@+id/xwalkview"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginBottom="50dp" />
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/text_reset"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_gravity="top|center"
+            android:background="#4075F0FE"
+            android:text="@string/browser_reset"
+            android:textAlignment="center"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/image_menu"
             android:layout_width="wrap_content"
-            android:layout_height="15dp"
+            android:layout_height="20dp"
             android:layout_gravity="bottom|center"
             android:src="@drawable/menu_line" />
 
