--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -91,6 +90,14 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/menu_button"
                         android:text="@string/menu_download"
+                        android:textColor="#FFFFFF" />
+
+                    <Button
+                        android:id="@+id/menu_about"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/menu_button"
+                        android:text="@string/menu_about"
                         android:textColor="#FFFFFF" />
                 </LinearLayout>
             </LinearLayout>
