--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,6 +93,14 @@
                         android:textColor="#FFFFFF" />
 
                     <Button
+                        android:id="@+id/menu_setting"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/menu_button"
+                        android:text="@string/menu_setting"
+                        android:textColor="#FFFFFF" />
+
+                    <Button
                         android:id="@+id/menu_about"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
