--- a/app/src/main/res/layout/widget_setting.xml
+++ b/app/src/main/res/layout/widget_setting.xml
@@ -31,6 +31,19 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end|center_vertical">
 
+            <RadioButton
+                android:id="@+id/setting_radio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:clickable="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:scaleType="fitEnd"
+                tools:visibility="gone" />
+
             <Switch
                 android:id="@+id/setting_switch"
                 android:layout_width="match_parent"
