Update: 完善已有设置

--- a/app/src/main/res/layout/widget_setting.xml
+++ b/app/src/main/res/layout/widget_setting.xml
@@ -48,6 +48,9 @@
                 android:id="@+id/setting_switch"
                 android:layout_width="match_parent"
                 android:layout_height="47dp"
+                android:clickable="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 tools:ignore="UseSwitchCompatOrMaterialXml"
                 tools:visibility="gone" />
 
