--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context=".ui.MainActivity"
+    tools:context=".MainActivity"
     tools:deviceIds="wear">
 
     <FrameLayout
@@ -43,7 +43,7 @@
                             android:id="@+id/edit_search"
                             android:layout_width="160dp"
                             android:layout_height="48dp"
-                            android:hint="@string/text_searchbox" />
+                            android:hint="@string/text_search" />
 
                         <ImageView
                             android:layout_width="40dp"
@@ -58,7 +58,7 @@
                     android:id="@+id/imageView"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:src="@drawable/menu_up" />
+                    android:src="@drawable/baseline_expand_less_24" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -73,7 +73,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/menu_button"
-                        android:text="@string/menu_history"
+                        android:text="@string/btn_history"
                         android:textColor="#FFFFFF" />
 
                     <Button
@@ -81,7 +81,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/menu_button"
-                        android:text="@string/menu_bookmark"
+                        android:text="@string/btn_bookmark"
                         android:textColor="#FFFFFF" />
 
                     <Button
@@ -89,7 +89,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/menu_button"
-                        android:text="@string/menu_download"
+                        android:text="@string/btn_download"
                         android:textColor="#FFFFFF" />
 
                     <Button
@@ -97,7 +97,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/menu_button"
-                        android:text="@string/menu_setting"
+                        android:text="@string/btn_setting"
                         android:textColor="#FFFFFF" />
 
                     <Button
@@ -105,11 +105,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/menu_button"
-                        android:text="@string/menu_about"
+                        android:text="@string/btn_about"
                         android:textColor="#FFFFFF" />
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
     </FrameLayout>
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
